--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </script>
   <script src='//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js'></script>
   <script>const whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: true };</script>
-  <script defer src='https://wow.zamimg.com/widgets/power.js'></script>
+  <script src='https://wow.zamimg.com/widgets/power.js'></script>
 </body>
 
 </html>
