check if any of them work

--- a/index.html
+++ b/index.html
@@ -24,12 +24,44 @@
       auto2top: true,
       name: 'Ancestral Guidance',
       plugins: [
-        function (hook, vm) {
-          hook.afterEach(function(html, next) {
-            $WowheadPower.refreshLinks();
-            next(html);
-          });
-        }
+      function(hook, vm) {
+      hook.init(function() {
+        // Called when the script starts running, only trigger once, no arguments,
+        $WowheadPower.init();
+      });
+
+      hook.beforeEach(function(content) {
+        // Invoked each time before parsing the Markdown file.
+        // ...
+        $WowheadPower.refreshLinks();
+        return content;
+      });
+
+      hook.afterEach(function(html, next) {
+        // Invoked each time after the Markdown file is parsed.
+        // beforeEach and afterEach support asynchronous。
+        // ...
+        // call `next(html)` when task is done.
+        $WowheadPower.refreshLinks();
+        next(html);
+      });
+
+      hook.doneEach(function() {
+        // Invoked each time after the data is fully loaded, no arguments,
+        // ...
+        $WowheadPower.refreshLinks();
+      });
+
+      hook.mounted(function() {
+        // Called after initial completion. Only trigger once, no arguments.
+        $WowheadPower.refreshLinks();
+      });
+
+      hook.ready(function() {
+        // Called after initial completion, no arguments.
+        $WowheadPower.refreshLinks();
+      });
+    }
       ]
     }
   </script>
