--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css'>
   <link rel='stylesheet' href='style.css' type='text/css'>
-  <link
-  rel="stylesheet"
-  href="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/style.min.css"
-/>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/style.min.css" />
 
 </head>
 
@@ -39,10 +36,6 @@
           toggleBtnBg: "black",
           textColor: "var(--theme-color)"
         }
-      },
-      themeable: {
-          readyTransition : true, // default
-          responsiveTables: true  // default
       },
       plugins: [
         function (hook, vm) {
