--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <meta name='viewport'
     content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0'>
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css'>
-  <link rel='stylesheet' href='style.css' type='text/css'>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/style.min.css" />
+  <link rel='stylesheet' href='style.css' title="docsify-darklight-theme" type='text/css'>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@3/dist/docsify-themeable/style.min.css"
+    type="text/css">
 
 </head>
 
@@ -25,16 +26,40 @@
       //routerMode: 'history', //seems very broken sadly
       auto2top: true,
       name: 'Ancestral Guidance',
-      darkMode: {
+      darklightTheme: {
+        siteFont: "Roboto Regular",
+        defaultTheme: 'dark',
+        codeFontFamily: 'Roboto Mono, Monaco, courier, monospace',
+        bodyFontSize: '17px',
         dark: {
-          background: "#1c2022",
-          toggleBtnBg: "#34495e",
-          textColor: "#b4b4b4"
+          accent: '#42b983',
+          toogleBackground: '#ffffff',
+          background: '#091a28',
+          textColor: '#b4b4b4',
+          codeTextColor: '#ffffff',
+          codeBackgroudColor: '#0e2233',
+          borderColor: '#0d2538',
+          blockQuoteColour: '#858585',
+          highlightColor: '#d22778',
+          sidebarSublink: '#b4b4b4',
+          codeTypeColor: '#ffffff',
+          coverBackground: 'url("/maelstrom.jpg") center center / cover',
+          toogleImage: 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/sun.svg)'
         },
         light: {
-          background: "white",
-          toggleBtnBg: "black",
-          textColor: "var(--theme-color)"
+          accent: '#42b983',
+          toogleBackground: '#091a28',
+          background: '#ffffff',
+          textColor: '#34495e',
+          codeTextColor: '#525252',
+          codeBackgroudColor: '#f8f8f8',
+          borderColor: 'rgba(0, 0, 0, 0.07)',
+          blockQuoteColor: '#858585',
+          highlightColor: '#d22778',
+          sidebarSublink: '#b4b4b4',
+          codeTypeColor: '#091a28',
+          coverBackground: 'url("/maelstrom.jpg") center center / cover',
+          toogleImage: 'url(https://cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/icons/moon.svg)'
         }
       },
       plugins: [
@@ -80,7 +105,7 @@
     }
   </script>
   <script src='//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js'></script>
-  <script src="//cdn.jsdelivr.net/npm/docsify-dark-mode@latest/dist/index.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/index.min.js" type="text/javascript"></script>
   <script>const whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: true };</script>
   <script defer src='https://wow.zamimg.com/widgets/power.js'></script>
 </body>
